Bug 942189 - Only avoid creating scroll info layers for root scroll frames in display root documents (not root content documents) because those have already had RecordFrameMetrics on them. r=roc, a=lsblakk